--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 main {
   min-height: 80vh;
+  background-color: lightgrey;
 }
 
 h3 {
@@ -25,6 +26,7 @@ h2 {
 .carousel-item-prev,
 .carousel-item.active {
   display: flex;
+  background-color: lightdark;
 }
 .carousel-caption {
   position: absolute;
@@ -36,18 +38,20 @@ h2 {
 }
 
 .carousel img {
-  height: 300px;
+  height: 500px;
   padding: 30px;
   margin: 40px;
-  border-radius: 50%;
+
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
 .carousel a {
   margin: 0 auto;
 }
-@media (max-width: 900px) {
+@media (max-width: 700px) {
   .carousel-caption h2 {
     font-size: 2.5vw;
   }
 }
+
