changed nav height

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -17,7 +17,7 @@
     background: transparent;
     justify-content: center;
     align-items: center;
-    
+    height: 50px;
 }
 
 .navbar.active {
